objects/Feature_Add_On_Prerequisite__c.object
<CustomObject>
    <fields>
        <fullName>Feature_Add_On_Prerequisite_Id__c</fullName>
        <externalId>true</externalId>
        <label>Feature Add On Prerequisite Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Feature__c</referenceTo>
        <relationshipLabel>Feature Add On Prerequisite</relationshipLabel>
        <relationshipName>Feature_Add_On_Prerequisite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Feature_Id__c</fullName>
        <description>Feature Id of the pre-requisite feature</description>
        <label>Prerequisite Feature Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Feature Add On Prerequisite</label>
    <nameField>
        <label>Feature Add On Prerequisite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Add On Prerequisite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>